<<<<<<< HEAD

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<!-- ORGANIZATION is replaced with the organization name (duke-compsci308-fall2014) -->
	<!-- REPO is replaced with the repo name (slogo_team01) -->
	<groupId>duke-compsci308-spring2015.voogasalad_HighScroller</groupId>
	<artifactId>voogasalad_HighScroller</artifactId>
	<version>master-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>iso-8859-1</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.8</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>2.4.1</version>
		</dependency>
		<dependency>
			<groupId>com.oracle</groupId>
			<artifactId>javafx</artifactId>
			<version>8.0.31</version>
			<systemPath>${java.home}/lib/ext/jfxrt.jar</systemPath>
			<scope>system</scope>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>.</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<encoding>iso-8859-1</encoding>
					<excludes>
						<exclude>src/**/*Test.java</exclude>
						<exclude>src/**/Test*.java</exclude>
						<exclude>src/**/*Test*.java</exclude>
					</excludes>
					<includes>
						<include>src/**/*.java</include>
					</includes>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
